--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,9 +18,11 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
+// Adding the apply plugin statement for safeargs
 apply plugin: 'kotlin-kapt'
 
 apply plugin: 'androidx.navigation.safeargs'
+
 
 android {
     compileSdkVersion 30
