--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,11 @@ android {
     }
     productFlavors {
     }
+
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 dependencies {
